* 2013-06-28 - thorben.betten@open-xchange.com

 - Fix for bug 27284: Don't null'ify default folders' full names if located on root level

* 2013-07-26 - martin.herfurth@open-xchange.com

 - Fix for bug 26954: Already deleted Exceptions within invitation mails.
 - Fix for bug 27257: Broken Create Table Statement.

* 2013-06-26 - thorben.betten@open-xchange.com

 - Fix for bug 27235: Check fall-back URL if first retrieval attempt fails

* 2013-06-19 - thorben.betten@open-xchange.com

 - Fix for bug 27154: Made initial insertion of "uuid" column with " DEFAULT NULL" appendix + insert file names with respect to "uuid" column

* 2013-06-19 - marcus.klein@open-xchange.com

 - Fix for bug 27147: Added necessary dependency for update task to have them run in the correct order.
 - Fix for bug 27065: If reading the replication monitor counter from the slave fails 10 times fall back to master to obtain a connection.
 - Fix for bug 27126: Trying to fetch a connection from the newly created pool if the pool has been stopped in the meantime.

* 2013-06-17 - jan.bauerdick@open-xchange.com

 - Fix for bug 27097: Added missing columns to CreateTableServices

* 2013-06-14 - thorben.betten@open-xchange.com

 - Fix for bug 27098: Added missing imports to MANIFEST.MF file

* 2013-06-14 - marcus.klein@open-xchange.com

 - Fix for bug 26859: Patched javax.mail implementation to create a Kerberos security context before SASL login takes place.

* 2013-06-13 - choeger@open-xchange.com

 - Fix for bug 25205: Restarting the groupware process leads to a 'Port already
   in use: 9999' error

* 2013-06-11 - marcus.klein@open-xchange.com

 - Fix for bug 26860: Implemented username and password authentication for Kerberos authentication implementation.

* 2013-06-04 - thorben.betten@open-xchange.com

 - Fix for bug 26911: Turned into an abstract class

* 2013-05-28 - thorben.betten@open-xchange.com

 - Fix for bug 26815: Don't interrupt appender task if not finished
