@@ -52,10 +52,13 @@ package com.openexchange.contact.storage.rdb.internal;
 import java.sql.Connection;
 import java.sql.DataTruncation;
 import java.sql.SQLException;
+import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 import org.apache.commons.logging.Log;
 import com.openexchange.contact.SortOptions;
 import com.openexchange.contact.SortOrder;
+import com.openexchange.contact.storage.rdb.fields.DistListMemberField;
 import com.openexchange.contact.storage.rdb.mapping.Mappers;
 import com.openexchange.contact.storage.rdb.sql.Table;
 import com.openexchange.exception.OXException;
@@ -225,58 +228,62 @@ public final class Tools {
      *
      * @param member the distribution list member
      * @param referencedContact the contact referenced by the member
-     * @return <code>true</code>, if the member was actually updated, <code>false</code>, otherwise
+     * @return The updated fields, or an empty array if no fields were updated
      * @throws OXException
      */
-    public static boolean updateMember(DistListMember member, Contact referencedContact) throws OXException {
-    	boolean wasUpdated = false;
-    	if (referencedContact.containsParentFolderID() && referencedContact.getParentFolderID() != member.getFolderID()) {
-    		member.setFolderID(referencedContact.getParentFolderID());
-    		wasUpdated = true;
-    	}
+    public static DistListMemberField[] updateMember(DistListMember member, Contact referencedContact) throws OXException {
+        List<DistListMemberField> updatedFields = new ArrayList<DistListMemberField>();
+        if (referencedContact.containsObjectID() && referencedContact.getObjectID() != member.getEntryID()) {
+            member.setEntryID(referencedContact.getObjectID());
+            updatedFields.add(DistListMemberField.CONTACT_ID);
+        }
+        if (referencedContact.containsParentFolderID() && referencedContact.getParentFolderID() != member.getFolderID()) {
+            member.setFolderID(referencedContact.getParentFolderID());
+            updatedFields.add(DistListMemberField.CONTACT_FOLDER_ID);
+        }
     	if (referencedContact.containsDisplayName()) {
     		if (null == referencedContact.getDisplayName() && null != member.getDisplayname() ||
     				null != referencedContact.getDisplayName() && false == referencedContact.getDisplayName().equals(member.getDisplayname())) {
     			member.setDisplayname(referencedContact.getDisplayName());
-    			wasUpdated = true;
+                updatedFields.add(DistListMemberField.DISPLAY_NAME);
     		}
     	}
     	if (referencedContact.containsSurName()) {
     		if (null == referencedContact.getSurName() && null != member.getLastname() ||
     				null != referencedContact.getSurName() && false == referencedContact.getSurName().equals(member.getLastname())) {
     			member.setLastname(referencedContact.getSurName());
-    			wasUpdated = true;
+                updatedFields.add(DistListMemberField.LAST_NAME);
     		}
     	}
     	if (referencedContact.containsGivenName()) {
     		if (null == referencedContact.getGivenName() && null != member.getFirstname() ||
     				null != referencedContact.getGivenName() && false == referencedContact.getGivenName().equals(member.getFirstname())) {
     			member.setFirstname(referencedContact.getGivenName());
-    			wasUpdated = true;
+                updatedFields.add(DistListMemberField.FIRST_NAME);
     		}
     	}
     	if (referencedContact.containsEmail1() && DistributionListEntryObject.EMAILFIELD1 == member.getEmailfield()) {
     		if (null == referencedContact.getEmail1() && null != member.getEmailaddress() ||
     				null != referencedContact.getEmail1() && false == referencedContact.getEmail1().equals(member.getEmailaddress())) {
     			member.setEmailaddress(referencedContact.getEmail1(), false);
-    			wasUpdated = true;
+                updatedFields.add(DistListMemberField.MAIL);
     		}
     	}
     	if (referencedContact.containsEmail2() && DistributionListEntryObject.EMAILFIELD2 == member.getEmailfield()) {
     		if (null == referencedContact.getEmail2() && null != member.getEmailaddress() ||
     				null != referencedContact.getEmail2() && false == referencedContact.getEmail2().equals(member.getEmailaddress())) {
     			member.setEmailaddress(referencedContact.getEmail2(), false);
-    			wasUpdated = true;
+                updatedFields.add(DistListMemberField.MAIL);
     		}
     	}
     	if (referencedContact.containsEmail3() && DistributionListEntryObject.EMAILFIELD3 == member.getEmailfield()) {
     		if (null == referencedContact.getEmail3() && null != member.getEmailaddress() ||
     				null != referencedContact.getEmail3() && false == referencedContact.getEmail3().equals(member.getEmailaddress())) {
     			member.setEmailaddress(referencedContact.getEmail3(), false);
-    			wasUpdated = true;
+                updatedFields.add(DistListMemberField.MAIL);
     		}
     	}
-    	return wasUpdated;
+    	return updatedFields.toArray(new DistListMemberField[updatedFields.size()]);
     }
 
     /**
